plugins {
    id 'idea'
    id 'java-library'
    id 'io.github.goooler.shadow' version '8.+'
}

group = project_package
version = project_version

compileJava {
    options.deprecation = false //We don't need to log all of the deprecated stuff when compiling
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
        inheritOutputDirs = true
    }
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    setArchiveBaseName(project_id)
    manifest {
        attributes([
                'Implementation-Version': project_version,
                'Main-Class': "${project_package}.serverstalker.ServerStalker"
        ])
    }
    finalizedBy 'shadowJar'
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

repositories {
    mavenCentral()
    maven {
        name = 'JitPack'
        url = uri 'https://jitpack.io'
    }
    maven {
        name = 'LavaLink'
        url = uri 'https://maven.lavalink.dev/releases'
    }
}

dependencies {
    implementation "ch.qos.logback:logback-classic:$logback_version"
    implementation "com.discord4j:discord4j-core:$discord4j_version"
    implementation "dev.arbjerg:lavaplayer:$logback_version"
    implementation "dev.lavalink.youtube:v2:$youtube_source_version"
    implementation "io.github.givimad:whisper-jni:$whisper_version"
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}